--- a/AboutMe.html
+++ b/AboutMe.html
@@ -87,7 +87,7 @@
                         Major: Computer Science: Expected Graduation May 2021
                     </p>
                     <p>Major: Applied Mathematics</p>
-                    <p>G.P.A: 3.89</p>
+                    <p>G.P.A: 3.925</p>
                 </div>
                 <div id="pt1-education-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
                 <hr class="resume-break" />
@@ -96,15 +96,21 @@
                 <div id="pt2-skills" onclick="toggleContent(event)">
                     <ul>
                         <li>
-                            Programming experience with:
+                            Languages:
                             <ul>
-                                <li>C#(Advanced), C/C++(Advanced), Python(Intermediate) and Java(Intermediate)</li>
+                                <li>C#(Advanced), C/C++(Advanced), JavaScript(Advanced), CSS 3(Intermediate), HTML 5(Advanced), Swift(Intermediate), Python(Intermediate), Java(Advanced) </li>
                             </ul>
                         </li>
                         <li>
-                            Use with:
+                            Technologies:
                             <ul>
-                                <li>Visual Studio, Command Line, and XCode</li>
+                                <li>React(Intermediate), Node.JS(Intermediate), Xamarin(Advanced), Firebase(Intermediate), jQuery(Familiar), MySQL(Intermediate), SQL(Intermediate)</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Tools:
+                            <ul>
+                                <li>Visual Studio, Command Line, XCode, Git/Github</li>
                             </ul>
                         </li>
                     </ul>
@@ -115,43 +121,68 @@
                 <h2 class="resume-heading">Related Coursework</h2>
                 <div id="pt3-course" onclick="toggleContent(event)">
                     <ul>
-                        <li>Computer Science I & II, Object Oriented Design, Data Structures, Systems Analyst and Design, Software Engineering, Algorithms and Optimization, Machine Learning Fundamentals, Web Applications, Database Management</li>
+                        <li>Object Oriented Design, Data Structures, Software Engineering, Algorithms and Optimization, Database Management Systems, Operating Systems, and Parallel Computing</li>
                         <li>Info Security Fundamentals, Assembly, Networking, Operating Systems</li>
-                        <li>Calculus I, Calculus II, Introduction to Discrete Math, Introduction to Statistics, Discrete Mathematics, and Signals and Systems</li>
+                        <li>Calculus I, Calculus II, Introduction to Statistics, Discrete Mathematics, Signals and Systems, and Linear Algebra</li>
                     </ul>
                 </div>
                 <div id="pt3-course-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
                 <hr class="resume-break" />
 
+                <h2 class="resume-heading">Work Experience</h2>
+                <div id="pt6-work" onclick="toggleContent(event)">
+                    <p>Great West Casualty: June 2020 to present</p>
+                    <p>Position: Software Developer Intern</p>
+                    <p>Responsibilities: </p>
+                    <ul>
+                        <li>Used problem solving to complete over 30 stories and defects.</li>
+                        <li>Learned skills working as a team in an Agile environment.</li>
+                        <li>Prevented bugs from going into production though system testing.</li>
+                        <li>Participation in code reviews.</li>
+                        <li>Gained fluency in object-oriented programming with Java.</li>
+                    </ul>
+                    <p>Austads Golf: December 2013 to present</p>
+                    <p>Position: Retail Sales Associate</p>
+                </div>
+                <div id="pt6-work-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
+
                 <h2 class="resume-heading">Projects</h2>
                 <div id="pt4-projects" onclick="toggleContent(event)">
-                    <p>View my projects <a href="Projects.html">here</a></p>
+                    <p>Apple Developer Program</p>
                     <ul>
                         <li>
-                            iOS App Development
+                            Published six iOS apps used by over 3,000 people.
                             <ul>
-                                <li>https://itunes.apple.com/us/developer/andrew-rotert/id1448329272</li>
-                                <li>Developed and published multiple apps using concepts learned in Object Orientated Programming, Data Structures, and Assembly.</li>
+                                <li>Learned Xamarin.iOS and Native iOS frameworks.</li>
+                                <li>Used object-oriented design, data structures, and parallelization.</li>
                             </ul>
-                        </li>
-                        <li>
-                            Programming Competitions
-                            <ul>
-                                <li>
-                                    Competed in multiple programing competitions:
-                                    <ul><li>ACM Regional, DSU local competition, Google Hashcode, MCIS, and Google CodeJam</li></ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            Window Forms Projects
-                            <ul><li>Developed multiple windows forms using concepts learned in Object Orientated Programming and Data Structures.</li></ul>
-                        </li>
-                        <li>
-                            Android App Development
-                            <ul><li>Using concepts learned in Data Structures and from other projects, developed and published an Android mobile application.</li></ul>
                         </li>
                     </ul>
+                    <p>Programming Competitions</p>
+                    <ul>
+                        <li>
+                            Competed in multiple programming competitions
+                            <ul>
+                                <li>ACM Regional, DSU Local, Google Hashcode and CodeJam, MCIS.</li>
+                                <li>Worked efficiently on a team to solve programming problems.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <p>Web Development</p>
+                    <ul>
+                        <li>
+                            Product Backlog Developer
+                            <ul>
+                                <li>Full stack web app built using React and Google Firebase.</li>
+                                <li>Applied critical thinking skills to overcome many challenges.</li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    <p>View all my projects <a href="Projects.html">here</a></p>
+                    <p>View my iOS App Store profile <a href="https://apps.apple.com/us/developer/andrew-rotert/id1448329272">here</a></p>
+
                 </div>
                 <div id="pt4-projects-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
                 <hr class="resume-break" />
@@ -160,21 +191,14 @@
                 <div id="pt5-involvement" onclick="toggleContent(event)">
                     <ul>
                         <li>General Beadle Honors program at DSU</li>
-                        <li>DSU Golf Team</li>
                         <li>DSU Programming Club</li>
+                        <li>PBL Business Club</li>
                     </ul>
                 </div>
                 <div id="pt5-involvement-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
                 <hr class="resume-break" />
 
-                <h2 class="resume-heading">Work Experience</h2>
-                <div id="pt6-work" onclick="toggleContent(event)">
-                    <p>Austads Golf: December 2013 to present</p>
-                    <p>Position: Retail Sales Associate</p>
-                </div>
-                <div id="pt6-work-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
-                <hr class="resume-break" />
-
+                <center><p><a href="Documents/AndrewRotertResume2020.pdf" download="Andrew-Rotert-Resume">Downlaod a PDF version here.</a></p></center>
             </div>
         </div>
     </main>
