Stop displaying article

--- a/BuildWidgets.html
+++ b/BuildWidgets.html
@@ -39,6 +39,9 @@
     <hr class="nav" />
 
     <center><h1 class="pages" id="title">Widgets Article</h1></center>
+    <center><h1 class="pages" id="title">Removed, pending sale</h1></center>
+
+    <!--
     <center><h3 class="pages">(Published on Medium: <a href="https://medium.com/better-programming/how-to-develop-a-home-screen-widget-from-scratch-for-ios-14-b185972350f3?source=friends_link&sk=b8456f40e69b34e544e49a85cefc1c82">here</a>)</h3></center>
 
     <div class="article">
@@ -223,6 +226,7 @@
             <br />Thanks for following along. Good luck on your development journey.
         </p>
     </div>
+        -->
 
     <footer>
         <div class="right_position">
