--- a/BuildWidgets.html
+++ b/BuildWidgets.html
@@ -39,7 +39,48 @@
     <hr class="nav" />
 
     <center><h1 class="pages" id="title">Widgets Article</h1></center>
-    <center><h1 class="pages" id="title">Removed, pending sale</h1></center>
+    <div class="article">
+        <hr />
+        <center><h1 class="pages" id="title">The widgets article published on Medium, and the public Github repositories were removed with the sale of the iOS application.</h1></center>
+        <hr />
+        <center><h2 class="pages" id="title">The widgets app was a fun project to work on, and by far one of the most successful ones.</h2></center>
+        <center>
+            <figure>
+                <img src="Images/PWidget/Medium.png" />
+                <figcaption>The published article got read over 1000 times.</figcaption>
+            </figure>
+        </center>
+        <center>
+            <figure>
+                <img src="Images/PWidget/TopCharts.png" />
+                <figcaption>The Photobox Widget app got to number 16 in free iOS apps.</figcaption>
+            </figure>
+        </center>
+        <center>
+            <figure>
+                <img src="Images/PWidget/Utilities.png" />
+                <figcaption>The Photobox Widget app got ranked 2nd for utilities.</figcaption>
+            </figure>
+        </center>
+        <center>
+            <figure>
+                <img src="Images/PWidget/DayHigh.png" />
+                <figcaption>For one day alone, the Photobox Widget app saw nearly 180,000 downloads.</figcaption>
+            </figure>
+        </center>
+        <center>
+            <figure>
+                <img src="Images/PWidget/TotalDownloads.png" />
+                <figcaption>Under its two weeks of my ownership, Photobox Widget got downloaded 675,000 times.</figcaption>
+            </figure>
+        </center>
+        <center>
+            <figure>
+                <img src="Images/PWidget/NewOwner.png" />
+                <figcaption>Finally, Photobox Widget was sold to its new owner.</figcaption>
+            </figure>
+        </center>
+    </div>
 
     <!--
     <center><h3 class="pages">(Published on Medium: <a href="https://medium.com/better-programming/how-to-develop-a-home-screen-widget-from-scratch-for-ios-14-b185972350f3?source=friends_link&sk=b8456f40e69b34e544e49a85cefc1c82">here</a>)</h3></center>
