update website with new logos

--- a/AugmentedRealityVisualizer.html
+++ b/AugmentedRealityVisualizer.html
@@ -29,8 +29,7 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <p class="top-name">By Andrew Rotert</p>
+        <center><img src="Images/WebsiteLogo.png" class="logo" alt="Logo" /></center>
     </div>
 
     <hr class="nav" />
@@ -165,7 +164,7 @@
 
     <footer>
         <div class="right_position">
-            <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
+            <img src="Images/App Development Logo 150.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
             <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
