--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body {
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Developed Not Downlaoded | Home</title>
-    <!-- <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />-->
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
     <link rel="apple-touch-icon" href="Images/weblogo180.png">
     <link rel="apple-touch-icon" sizes="76x76" href="Images/weblogo76.png">
@@ -40,8 +39,7 @@ body {
 <body>
 
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <p class="top-name">By Andrew Rotert</p>
+        <center><img src="Images/WebsiteLogo.png" class="logo" alt="Logo" /></center>
     </div>
 
     <hr class="nav" />
@@ -54,8 +52,8 @@ body {
             <div class="container">
                 <img src="Images/LaptopFW.png" alt="Laptop" class="resize" />
                 <div class="centered">
-                    <h1 class="index">Official Website of Developed Not Downloaded</h1>
-                    <h2 class="index">The start of something big.</h2>
+                    <h1 class="index">Andrew Rotert</h1>
+                    <h2 class="index">Mobile App Developer.</h2>
                 </div>
             </div>
         </div>
@@ -63,8 +61,7 @@ body {
         <div id="grid-mission">
             <hr class="indexTop" />
             <h3 class="index">
-                Developed Not Downloaded gets its name from the passion that
-                stems from building a product. As the name suggests, a product is being created that may not exist anywhere. A piece of software is acquired by developing it, not just downloading it.
+                Graduated from Dakota State University with bachelor's degrees in computer science and applied mathematics.
             </h3>
             <hr class="indexBottom" />
         </div>
@@ -84,16 +81,9 @@ body {
         </div>
 
         <div id="grid-image3">
-            <img class="resizing" src="Images/Future.png" alt="Future Business Plan" />
-        </div>
-        <div id="grid-content3">
-            <h2>A website for a future business platform</h2>
-        </div>
-
-        <div id="grid-image4">
             <img class="resizing" src="Images/Self.png" alt="About Developer" />
         </div>
-        <div id="grid-content4">
+        <div id="grid-content3">
             <h2>A website about the developer, Andrew Rotert</h2>
         </div>
 
@@ -101,7 +91,7 @@ body {
 
     <footer>
         <div class="right_position">
-            <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
+            <img src="Images/App Development Logo 150.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
             <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
