--- a/PhotoboxWidget.html
+++ b/PhotoboxWidget.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <style>
     body {
         background: url(Images/DNDBKGTemplate2.png) repeat-x bottom;
@@ -27,8 +27,7 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <p class="top-name">By Andrew Rotert</p>
+        <center><img src="Images/WebsiteLogo.png" class="logo" alt="Logo" /></center>
     </div>
 
     <hr class="nav" />
@@ -152,7 +151,7 @@
 
     <footer>
         <div class="right_position">
-            <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
+            <img src="Images/App Development Logo 150.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
             <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
